--- a/.github/workflows/n2n_00x01_call-build-all-pre.yml
+++ b/.github/workflows/n2n_00x01_call-build-all-pre.yml
@@ -1,4 +1,4 @@
-name: n2n-build-all
+name: n2n-build-all-pre
 
 # This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed by
