--- a/.github/workflows/n2n_00x00_manual-scan-all-to-build.yml
+++ b/.github/workflows/n2n_00x00_manual-scan-all-to-build.yml
@@ -33,9 +33,9 @@ jobs:
             - name: Check build-version
               id: build-version
               run: |
-                  cd n2n/scripts/build
-                  chmod +x *.sh
-                  source 0x0_init_logger.sh.sh
+                  LOG_INFO() {
+                    echo -e $(caller) "\033[0;32m[    INFO] $@ \033[0m"
+                  }
 
                   LOG_INFO 'scan_all_save Starting'
                   1x1_n2n-scan-all.sh
