--- a/.github/workflows/n2n_00x00_manual-scan-all-to-build.yml
+++ b/.github/workflows/n2n_00x00_manual-scan-all-to-build.yml
@@ -30,13 +30,14 @@ jobs:
         steps:
             - name: Checkout repository
               uses: actions/checkout@v3
+
             - name: Check build-version
               id: build-version
               run: |
-                  LOG_INFO() {
-                    echo -e $(caller) "\033[0;32m[    INFO] $@ \033[0m"
-                  }
-
+                  cd n2n/scripts/build
+                  chmod +x *.sh
+                  . 0x0_init_logger.sh
+                  
                   LOG_INFO 'scan_all_save Starting'
                   1x1_n2n-scan-all.sh
                   LOG_INFO 'scan_all_save Successful'
