加强代码可读性

--- a/.github/workflows/n2n_00x00_manual-scan-all-to-build.yml
+++ b/.github/workflows/n2n_00x00_manual-scan-all-to-build.yml
@@ -36,10 +36,10 @@ jobs:
               run: |
                   cd n2n/scripts/build
                   chmod +x *.sh
-                  . 0x0_init-logger.sh
+                  source 0x0_init-logger.sh
                   
                   LOG_INFO 'scan_all_save Starting'
-                  1x1_n2n-scan-all.sh
+                  ./1x1_n2n-scan-all.sh
                   LOG_INFO 'scan_all_save Successful'
                   echo "MATRIX_JSON=$(cat dict_build_obj.json)" >>  $GITHUB_OUTPUT
 
