--- a/.github/workflows/n2n_00x00_manual-scan-all-to-build.yml
+++ b/.github/workflows/n2n_00x00_manual-scan-all-to-build.yml
@@ -39,7 +39,7 @@ jobs:
                   source 0x0_init-logger.sh
                   
                   LOG_INFO 'scan_all_save Starting'
-                  ./1x1_n2n-scan-all.sh
+                  bash 1x1_n2n-scan-all.sh
                   LOG_INFO 'scan_all_save Successful'
                   echo "MATRIX_JSON=$(cat dict_build_obj.json)" >>  $GITHUB_OUTPUT
 
