fixbug: 将 uses 提取到 jobs

--- a/.github/workflows/n2n_00x01_call-build-all-pre.yml
+++ b/.github/workflows/n2n_00x01_call-build-all-pre.yml
@@ -69,6 +69,7 @@ jobs:
             DOCKER_APP_NAME: "n2n"
 
     docker-n2n-sh-build-test:
+        needs: ["docker-n2n-build-test"]
         permissions:
             contents: read
             packages: write
