--- a/.github/workflows/n2n_01x00_call-build-all.yml
+++ b/.github/workflows/n2n_01x00_call-build-all.yml
@@ -69,7 +69,7 @@ on:
                 required: true
                 type: boolean
 jobs:
-    build-all:
+    init-docker-tag:
         runs-on: ubuntu-latest
         permissions:
             contents: read
@@ -77,16 +77,14 @@ jobs:
             # This is used to complete the identity challenge
             # with sigstore/fulcio when running outside of PRs.
             id-token: write
+        outputs:
+            DOCKER_TEST_TAG: ${{ steps.check-docker-tag.outputs.DOCKER_TEST_TAG }}
         steps:
-            - name: Checkout repository
-              # depends on this library
-              uses: actions/checkout@v3
-
-            - name: init docker tags
-              id: init-docker-tags
+            - name: check docker tag
+              id: check-docker-tag
               run: |
                   LOG_INFO() {
-                    echo -e $(caller) "\033[0;32m[    INFO] $@ \033[0m"
+                      echo -e $(caller) "\033[0;32m[    INFO] $@ \033[0m"
                   }
                   docker_tag_prefix="${{ inputs.DOCKER_TAG_PREFIX }}"
                   LOG_INFO "DOCKER_TAG_PREFIX: ${docker_tag_prefix}"
@@ -96,95 +94,114 @@ jobs:
 
                   docker_tag="${{ inputs.VERSION_B_S_rC }}"
                   if [[ ${docker_tag_prefix} != '' ]]; then
-                    docker_tag=${docker_tag_prefix}-${docker_tag}
+                      docker_tag=${docker_tag_prefix}-${docker_tag}
                   fi
                   if [[ ${docker_tag_suffix} != '' ]]; then
-                    docker_tag=${docker_tag}-${docker_tag_suffix}
+                      docker_tag=${docker_tag}-${docker_tag_suffix}
                   fi
 
                   LOG_INFO "DOCKER_TEST_TAG: ${docker_tag}"
                   echo DOCKER_TEST_TAG=${docker_tag} >> $GITHUB_OUTPUT
 
-            - name: Check init-version
-              id: check-init-version
-              uses: ./.github/workflows/n2n_02x00_call-init-version.yml
-              with:
-                  VERSION_BIG: ${{ inputs.VERSION_BIG }}
-                  VERSION_SMALL: ${{ inputs.VERSION_SMALL }}
-                  VERSION_COMMIT: ${{ inputs.VERSION_COMMIT }}
-                  VERSION_B_S_rC: ${{ inputs.VERSION_B_S_rC }}
-                  STR_OS_ARCHS: ${{ inputs.STR_OS_ARCHS }}
-                  STR_DOWNLOAD_URLS: ${{ inputs.STR_DOWNLOAD_URLS }}
-                  FORCE_PUSH: ${{ inputs.FORCE_PUSH == 'true' }}
-                  NEED_FIXLIB_VERSIONS_B_S_rC: ${{ inputs.NEED_FIXLIB_VERSIONS_B_S_rC }}
-                  DOCKER_BUILD_DOCKERFILE: ${{ inputs.DOCKER_BUILD_DOCKERFILE }}
+    check-init-version:
+        uses: ./.github/workflows/n2n_02x00_call-init-version.yml
+        with:
+            VERSION_BIG: ${{ inputs.VERSION_BIG }}
+            VERSION_SMALL: ${{ inputs.VERSION_SMALL }}
+            VERSION_COMMIT: ${{ inputs.VERSION_COMMIT }}
+            VERSION_B_S_rC: ${{ inputs.VERSION_B_S_rC }}
+            STR_OS_ARCHS: ${{ inputs.STR_OS_ARCHS }}
+            STR_DOWNLOAD_URLS: ${{ inputs.STR_DOWNLOAD_URLS }}
+            FORCE_PUSH: ${{ inputs.FORCE_PUSH == 'true' }}
+            NEED_FIXLIB_VERSIONS_B_S_rC: ${{ inputs.NEED_FIXLIB_VERSIONS_B_S_rC }}
+            DOCKER_BUILD_DOCKERFILE: ${{ inputs.DOCKER_BUILD_DOCKERFILE }}
+
+    check-output-check-init-version:
+        needs: [check-init-version]
+        runs-on: ubuntu-latest
+        permissions:
+            contents: read
+            packages: write
+            # This is used to complete the identity challenge
+            # with sigstore/fulcio when running outside of PRs.
+            id-token: write
+        steps:
             - name: Check outputs check-init-version
               run: |
                   LOG_INFO() {
-                    echo -e $(caller) "\033[0;32m[    INFO] $@ \033[0m"
+                      echo -e $(caller) "\033[0;32m[    INFO] $@ \033[0m"
                   }
-                  LOG_INFO "ONLY_BIGVERSION: ${{ steps.check-init-version.outputs.ONLY_BIGVERSION }}"
-                  LOG_INFO "IS_LATEST_VERSION: ${{ steps.check-init-version.outputs.IS_LATEST_VERSION }}"
-                  LOG_INFO "NEED_FIX: ${{ steps.check-init-version.outputs.NEED_FIX }}"
-                  LOG_INFO "BUILD_DOCKERFILE: ${{ steps.check-init-version.outputs.BUILD_DOCKERFILE }}"
-                  LOG_INFO "DOCKER_BUILD_CACHE_TAG: ${{ steps.check-init-version.outputs.DOCKER_BUILD_CACHE_TAG }}"
+                  LOG_INFO "ONLY_BIGVERSION: ${{ needs.check-init-version.outputs.ONLY_BIGVERSION }}"
+                  LOG_INFO "IS_LATEST_VERSION: ${{ needs.check-init-version.outputs.IS_LATEST_VERSION }}"
+                  LOG_INFO "NEED_FIX: ${{ needs.check-init-version.outputs.NEED_FIX }}"
+                  LOG_INFO "BUILD_DOCKERFILE: ${{ needs.check-init-version.outputs.DOCKER_BUILD_DOCKERFILE }}"
+                  LOG_INFO "DOCKER_BUILD_CACHE_TAG: ${{ needs.check-init-version.outputs.DOCKER_BUILD_CACHE_TAG }}"
 
-            - name: Check pushed
-              id: check-pushed
-              uses: ./.github/workflows/n2n_02x01_call-check-pushed.yml
-              with:
-                  DOCKER_APP_NAME: ${{ inputs.DOCKER_APP_NAME }}
-                  DOCKER_TEST_TAG: ${{ steps.init-docker-tags.outputs.DOCKER_TEST_TAG }}
-                  FORCE_PUSH: ${{ inputs.FORCE_PUSH }}
+    check-pushed:
+        needs: [init-docker-tag]
+        uses: ./.github/workflows/n2n_02x01_call-check-pushed.yml
+        with:
+            DOCKER_APP_NAME: ${{ inputs.DOCKER_APP_NAME }}
+            DOCKER_TEST_TAG: ${{ needs.init-docker-tag.outputs.DOCKER_TEST_TAG }}
+            FORCE_PUSH: ${{ inputs.FORCE_PUSH }}
 
+    check-output-check-pushed:
+        needs: [check-pushed]
+        runs-on: ubuntu-latest
+        permissions:
+            contents: read
+            packages: write
+            # This is used to complete the identity challenge
+            # with sigstore/fulcio when running outside of PRs.
+            id-token: write
+        steps:
             - name: Check outputs check-pushed
               run: |
                   LOG_INFO() {
-                    echo -e $(caller) "\033[0;32m[    INFO] $@ \033[0m"
+                      echo -e $(caller) "\033[0;32m[    INFO] $@ \033[0m"
                   }
+                  LOG_INFO "LAST_PULLED_DATE: ${{ needs.check-pushed.outputs.LAST_PULLED_DATE }}"
+                  LOG_INFO "SKIP_BUILD_PUSH: ${{ needs.check-pushed.outputs.SKIP_BUILD_PUSH }}"
 
-                  LOG_INFO "LAST_PULLED_DATE: ${{ steps.check-pushed.outputs.LAST_PULLED_DATE }}"
-                  LOG_INFO "SKIP_BUILD_PUSH: ${{ steps.check-pushed.outputs.SKIP_BUILD_PUSH }}"
+    docker-n2n-build-test:
+        needs: [check-init-version, init-docker-tag]
+        uses: ./.github/workflows/n2n_02x01_call-docker-build-test-publish.yml
+        with:
+            VERSION_BIG: ${{ inputs.VERSION_BIG }}
+            VERSION_SMALL: ${{ inputs.VERSION_SMALL }}
+            VERSION_COMMIT: ${{ inputs.VERSION_COMMIT }}
+            VERSION_B_S_rC: ${{ inputs.VERSION_B_S_rC }}
+            STR_OS_ARCHS: ${{ inputs.STR_OS_ARCHS }}
+            STR_DOWNLOAD_URLS: ${{ inputs.STR_DOWNLOAD_URLS }}
+            DOCKER_CONTEXT_PATH: ${{ inputs.DOCKER_APP_NAME }}
+            DOCKER_APP_NAME: ${{ inputs.DOCKER_APP_NAME }}
+            DOCKER_TAG_PREFIX: ${{ inputs.DOCKER_TAG_PREFIX }}
+            DOCKER_TAG_SUFFIX: ${{ inputs.DOCKER_TAG_SUFFIX }}
+            DOCKER_BUILD_PLATFORMS: ${{ inputs.DOCKER_BUILD_PLATFORMS }}
+            DOCKER_BUILD_DOCKERFILE: ${{ needs.check-init-version.outputs.DOCKER_BUILD_DOCKERFILE }}
+            DOCKER_TEST_TAG: ${{ needs.init-docker-tag.outputs.DOCKER_TEST_TAG }}
+            IS_LATEST_VERSION: ${{ needs.check-init-version.outputs.IS_LATEST_VERSION }}
+            DOCKER_BUILD_CACHE_TAG: ${{ needs.check-init-version.outputs.DOCKER_BUILD_CACHE_TAG }}
+            DOCKER_PUSH: ${{ false }}
 
-            - name: docker-n2n-build-test
-              id: docker-n2n-build-test
-              uses: ./.github/workflows/n2n_02x01_call-docker-build-test-publish.yml
-              with:
-                  VERSION_BIG: ${{ inputs.VERSION_BIG }}
-                  VERSION_SMALL: ${{ inputs.VERSION_SMALL }}
-                  VERSION_COMMIT: ${{ inputs.VERSION_COMMIT }}
-                  VERSION_B_S_rC: ${{ inputs.VERSION_B_S_rC }}
-                  STR_OS_ARCHS: ${{ inputs.STR_OS_ARCHS }}
-                  STR_DOWNLOAD_URLS: ${{ inputs.STR_DOWNLOAD_URLS }}
-                  DOCKER_CONTEXT_PATH: ${{ inputs.DOCKER_APP_NAME }}
-                  DOCKER_APP_NAME: ${{ inputs.DOCKER_APP_NAME }}
-                  DOCKER_TAG_PREFIX: ${{ inputs.DOCKER_TAG_PREFIX }}
-                  DOCKER_TAG_SUFFIX: ${{ inputs.DOCKER_TAG_SUFFIX }}
-                  DOCKER_BUILD_PLATFORMS: ${{ inputs.DOCKER_BUILD_PLATFORMS }}
-                  DOCKER_BUILD_DOCKERFILE: ${{ steps.check-init-version.outputs.DOCKER_BUILD_DOCKERFILE }}
-                  DOCKER_TEST_TAG: ${{ steps.init-docker-tags.outputs.DOCKER_TEST_TAG }}
-                  IS_LATEST_VERSION: ${{ steps.check-init-version.outputs.IS_LATEST_VERSION }}
-                  DOCKER_BUILD_CACHE_TAG: ${{ steps.check-init-version.outputs.DOCKER_BUILD_CACHE_TAG }}
-                  DOCKER_PUSH: ${{ false }}
-
-            - name: docker-n2n-build-test-publish
-              id: docker-n2n-build-test-publish
-              if: ${{ ! steps.check-pushed.outputs.SKIP_BUILD_PUSH }}
-              uses: ./.github/workflows/n2n_02x01_call-docker-build-test-publish.yml
-              with:
-                  VERSION_BIG: ${{ inputs.VERSION_BIG }}
-                  VERSION_SMALL: ${{ inputs.VERSION_SMALL }}
-                  VERSION_COMMIT: ${{ inputs.VERSION_COMMIT }}
-                  VERSION_B_S_rC: ${{ inputs.VERSION_B_S_rC }}
-                  STR_OS_ARCHS: ${{ inputs.STR_OS_ARCHS }}
-                  STR_DOWNLOAD_URLS: ${{ inputs.STR_DOWNLOAD_URLS }}
-                  DOCKER_CONTEXT_PATH: ${{ inputs.DOCKER_APP_NAME }}
-                  DOCKER_APP_NAME: ${{ inputs.DOCKER_APP_NAME }}
-                  DOCKER_TAG_PREFIX: ${{ inputs.DOCKER_TAG_PREFIX }}
-                  DOCKER_TAG_SUFFIX: ${{ inputs.DOCKER_TAG_SUFFIX }}
-                  DOCKER_BUILD_PLATFORMS: ${{ inputs.DOCKER_BUILD_PLATFORMS }}
-                  DOCKER_BUILD_DOCKERFILE: ${{ steps.check-init-version.outputs.DOCKER_BUILD_DOCKERFILE }}
-                  DOCKER_TEST_TAG: ${{ steps.init-docker-tags.outputs.DOCKER_TEST_TAG }}
-                  IS_LATEST_VERSION: ${{ steps.check-init-version.outputs.IS_LATEST_VERSION }}
-                  DOCKER_BUILD_CACHE_TAG: ${{ steps.check-init-version.outputs.DOCKER_BUILD_CACHE_TAG }}
-                  DOCKER_PUSH: ${{ true }}
+    docker-n2n-build-test-publish:
+        needs: [check-init-version, init-docker-tag, check-pushed]
+        if: ${{ ! needs.check-pushed.outputs.SKIP_BUILD_PUSH }}
+        uses: ./.github/workflows/n2n_02x01_call-docker-build-test-publish.yml
+        with:
+            VERSION_BIG: ${{ inputs.VERSION_BIG }}
+            VERSION_SMALL: ${{ inputs.VERSION_SMALL }}
+            VERSION_COMMIT: ${{ inputs.VERSION_COMMIT }}
+            VERSION_B_S_rC: ${{ inputs.VERSION_B_S_rC }}
+            STR_OS_ARCHS: ${{ inputs.STR_OS_ARCHS }}
+            STR_DOWNLOAD_URLS: ${{ inputs.STR_DOWNLOAD_URLS }}
+            DOCKER_CONTEXT_PATH: ${{ inputs.DOCKER_APP_NAME }}
+            DOCKER_APP_NAME: ${{ inputs.DOCKER_APP_NAME }}
+            DOCKER_TAG_PREFIX: ${{ inputs.DOCKER_TAG_PREFIX }}
+            DOCKER_TAG_SUFFIX: ${{ inputs.DOCKER_TAG_SUFFIX }}
+            DOCKER_BUILD_PLATFORMS: ${{ inputs.DOCKER_BUILD_PLATFORMS }}
+            DOCKER_BUILD_DOCKERFILE: ${{ needs.check-init-version.outputs.DOCKER_BUILD_DOCKERFILE }}
+            DOCKER_TEST_TAG: ${{ needs.init-docker-tag.outputs.DOCKER_TEST_TAG }}
+            IS_LATEST_VERSION: ${{ needs.check-init-version.outputs.IS_LATEST_VERSION }}
+            DOCKER_BUILD_CACHE_TAG: ${{ needs.check-init-version.outputs.DOCKER_BUILD_CACHE_TAG }}
+            DOCKER_PUSH: ${{ true }}
